# chessbored

./: .gitignore  Cargo.toml  README.md  dev.sh  index.html  prd.sh  styles.css
.github/workflows/: ci.yaml  publish-on-release.yaml  publish.yaml
assets/board/: dark-square.data  legal-move-square.data  square-selected.data
assets/pieces/: bb.data  bk.data  bn.data  bp.data  bq.data  br.data  wb.data  wk.data  wn.data  wp.data  wq.data  wr.data
src/: assets.rs  board.rs  camera.rs  control_ux.rs  fen.rs  main.rs  pieces.rs  state.rs  tips.rs  types.rs
