[package]
name = "chessbored"
version = "0.1.0"
edition = "2021"

description = "a chess board with movable pieces that behaves like a chessboard on the table."
readme = "README.md"
keywords = ["chess", "board", "FEN", "bevy", "chessboard"]

[dependencies]
bevy = "0.7.0"
bevy_mod_picking = "0.7.0"
bevy_egui = "0.14.0"
indoc = "1.0.6"