[package]
name = "chessbored"
version = "0.3.0"
edition = "2021"

license = "MIT"

description = "a chess board with movable pieces that behaves like a chessboard on the table."
readme = "README.md"
keywords = ["chess", "board", "FEN", "bevy", "chessboard"]

homepage = "https://github.com/shnewto/chessbored"
repository = "https://github.com/shnewto/chessbored"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
bevy = "0.8.1"
bevy_egui = "0.16.1"
bevy_mod_picking = "0.9.0"
indoc = "1.0.6"
shakmaty = "0.22.0"
