[package]
name = "chessbored"
version = "0.3.3"
edition = "2021"

license = "MIT"

description = "a chess board with movable pieces that behaves like a chessboard on the table."
readme = "README.md"
keywords = ["chess", "board", "FEN", "bevy", "chessboard"]

homepage = "https://github.com/shnewto/chessbored"
repository = "https://github.com/shnewto/chessbored"

[dependencies]
bevy = "0.8.0"
bevy_egui = "0.16.0"
bevy_mod_picking = "0.9.0"
indoc = "1.0.6"
